--- a/GPS31.html
+++ b/GPS31.html
@@ -111,6 +111,9 @@
     window.onbeforeunload = function () {
         window.scrollTo(0, 0);
     }
+    window.onload = function () {
+        window.scrollTo(0, 0);
+    }
     var map;
     var infoWindow;
     var w1 = document.getElementById("w1");
