--- a/GPS31.html
+++ b/GPS31.html
@@ -109,6 +109,7 @@
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/website/IMG_4896.JPG" target="_blank">
             <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/website/IMG_4896.JPG">
         </a>
+    </div>
     <p class="comment">
         At first, I attempted to approach the lake left of this one. However, both are stillwater fishbreeding ponds and there was a putrid smell of rot coming from the, otherwise very similar, left pond. 
     </p>
@@ -383,7 +384,6 @@
     }
     .imgbox {
         flex-direction: row;
-        justify-content: center;
     }
     .title {
         font-weight: bold;
