--- a/GPS31.html
+++ b/GPS31.html
@@ -66,7 +66,26 @@
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4883.JPG" target="_blank">
             <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4883.JPG">
         </a>
+        <button onclick="plusDivs(-1)">&#10094;</button>
+        <button onclick="plusDivs(1)">&#10095;</button>
     </div>
+    <script>
+        var slideIndex = 1;
+        showDivs(slideIndex);
+        function plusDivs(n) {
+          showDivs(slideIndex += n);
+        }
+        function showDivs(n) {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          if (n > x.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = x.length}
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";  
+          }
+          x[slideIndex-1].style.display = "block";  
+        }
+        </script>
     <p class="comment">
         The most popular and great pond of the Platweiers is always a beautiful sight to behold or (some years) a great place to ice-skate. What we didn't expect was what seemed to be a result of the recent heatwave, resembling a terrible drought. We found almost dried out layers of sludge and the shells of fresh water pearlclams.    
     </p>
@@ -86,17 +105,15 @@
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4886.JPG" target="_blank">
             <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4886.JPG">
         </a>
-        <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-        <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+        <button onclick="plusDivs(-1)">&#10094;</button>
+        <button onclick="plusDivs(1)">&#10095;</button>
     </div>
     <script>
         var slideIndex = 1;
         showDivs(slideIndex);
-        
         function plusDivs(n) {
           showDivs(slideIndex += n);
         }
-        
         function showDivs(n) {
           var i;
           var x = document.getElementsByClassName("mySlides");
@@ -142,7 +159,26 @@
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4896.JPG" target="_blank">
             <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4896.JPG">
         </a>
+        <button onclick="plusDivs(-1)">&#10094;</button>
+        <button onclick="plusDivs(1)">&#10095;</button>
     </div>
+    <script>
+        var slideIndex = 1;
+        showDivs(slideIndex);
+        function plusDivs(n) {
+          showDivs(slideIndex += n);
+        }
+        function showDivs(n) {
+          var i;
+          var x = document.getElementsByClassName("mySlides");
+          if (n > x.length) {slideIndex = 1}
+          if (n < 1) {slideIndex = x.length}
+          for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";  
+          }
+          x[slideIndex-1].style.display = "block";  
+        }
+        </script>
     <p class="comment">
         At first, I attempted to approach the lake left of this one. However, both are stillwater fishbreeding ponds and there was a putrid smell of rot coming from the, otherwise very similar, left pond. 
     </p>
