--- a/GPS31.html
+++ b/GPS31.html
@@ -40,31 +40,31 @@
     <p class="title">Photos</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4869.JPG" target="_blank">
-        <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4869.JPG">
+        <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4869.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4870.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4870.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4870.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4871.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4871.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4871.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4872.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4872.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4872.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4875.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4875.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4875.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4876.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4876.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4876.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4878.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4878.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4878.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4880.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4880.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4880.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4883.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4883.JPG">
+            <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4883.JPG">
         </a>
         <button onclick="plusDivs(-1)">&#10094;</button>
         <button onclick="plusDivs(1)">&#10095;</button>
@@ -77,7 +77,7 @@
         }
         function showDivs(n) {
           var i;
-          var x = document.getElementsByClassName("imgs");
+          var x = document.getElementsByClassName("imgs1");
           if (n > x.length) {slideIndex = 1}
           if (n < 1) {slideIndex = x.length}
           for (i = 0; i < x.length; i++) {
@@ -100,10 +100,10 @@
     <p class="title">Photos</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4885.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4885.JPG">
+            <img class="imgs2" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4885.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4886.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4886.JPG">
+            <img class="imgs2" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4886.JPG">
         </a>
         <button onclick="plusDivs(-1)">&#10094;</button>
         <button onclick="plusDivs(1)">&#10095;</button>
@@ -116,7 +116,7 @@
         }
         function showDivs(n) {
           var i;
-          var x = document.getElementsByClassName("imgs");
+          var x = document.getElementsByClassName("imgs2");
           if (n > x.length) {slideIndex = 1}
           if (n < 1) {slideIndex = x.length}
           for (i = 0; i < x.length; i++) {
@@ -139,25 +139,25 @@
     <p class="title">Photos</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4887.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4887.JPG">
+            <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4887.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4888.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4888.JPG">
+            <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4888.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4890.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4890.JPG">
+            <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4890.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4891.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4891.JPG">
+            <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4891.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4894.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4894.JPG">
+            <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4894.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4895.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4895.JPG">
+            <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4895.JPG">
         </a>
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4896.JPG" target="_blank">
-            <img class="imgs" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4896.JPG">
+            <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4896.JPG">
         </a>
         <button onclick="plusDivs(-1)">&#10094;</button>
         <button onclick="plusDivs(1)">&#10095;</button>
@@ -170,7 +170,7 @@
         }
         function showDivs(n) {
           var i;
-          var x = document.getElementsByClassName("imgs");
+          var x = document.getElementsByClassName("imgs3");
           if (n > x.length) {slideIndex = 1}
           if (n < 1) {slideIndex = x.length}
           for (i = 0; i < x.length; i++) {
