--- a/GPS31.html
+++ b/GPS31.html
@@ -464,6 +464,8 @@
     }
     .imgbox {
         flex-direction: row;
+        justify-content: center;
+        justify-content: space-between;
     }
     .title {
         font-weight: bold;
