--- a/GPS31.html
+++ b/GPS31.html
@@ -466,6 +466,7 @@
         flex-direction: row;
         justify-content: center;
         justify-content: space-between;
+        margin: 0%;
     }
     .title {
         font-weight: bold;
