--- a/GPS31.html
+++ b/GPS31.html
@@ -477,12 +477,8 @@
         display: flex;
         justify-content: center;
     }
-    .img1s {
+    .imgs, .img1s, .imgs1, .imgs2, .imgs3 {
         width: 15rem;
-        height: auto;
-    }
-    .imgs, .imgs1, .imgs2, .imgs3 {
-        width: 7.40rem;
         height: auto;
     }
 
