--- a/GPS31.html
+++ b/GPS31.html
@@ -463,9 +463,10 @@
         flex-direction: column;
     }
     .imgbox {
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         justify-content: space-between;
+        text-justify: distribute-all-lines;
         margin: 0%;
     }
     .title {
