--- a/GPS31.html
+++ b/GPS31.html
@@ -480,6 +480,10 @@
         width: 15rem;
         height: auto;
     }
+    button {
+        align-self: center;
+        text-align: center;
+        }
 
 </style>
 
