--- a/GPS31.html
+++ b/GPS31.html
@@ -491,6 +491,8 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 </style>
 
