--- a/GPS31.html
+++ b/GPS31.html
@@ -491,8 +491,9 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        padding-left: 2rem;
-        padding-right: 2rem;
+        padding-left: 4rem;
+        padding-right: 4rem;
+        margin-top: 2rem;
     }
 </style>
 
