--- a/GPS31.html
+++ b/GPS31.html
@@ -449,7 +449,7 @@
     }
     var button = document.getElementsByClassName("b");
     button.onmouseover = (event) => {
-            b1.style.backgroundImage = "url('https://www.clker.com/cliparts/W/i/K/w/1/D/glossy-orange-circle-icon-md.png')"
+            button.style.backgroundImage = "url('https://www.clker.com/cliparts/W/i/K/w/1/D/glossy-orange-circle-icon-md.png')"
         }
 </script>
 <style>
