--- a/GPS31.html
+++ b/GPS31.html
@@ -401,7 +401,7 @@
         }
     };
     function createArea(objInfo, map) {
-        objInfo.obj = new google.maps.Polygon({
+            objInfo.obj = new google.maps.Polygon({
             paths: objInfo.polyPath,
             strokeColor: "#002966",
             strokeOpacity: 0.8,
@@ -449,6 +449,7 @@
     }
     var button = document.getElementsByClassName("b");
     button.onmouseover = (event) => {
+            button.fillColor = #
             button.style.backgroundImage = "url('https://www.clker.com/cliparts/W/i/K/w/1/D/glossy-orange-circle-icon-md.png')"
         }
 </script>
