--- a/GPS31.html
+++ b/GPS31.html
@@ -2,7 +2,7 @@
 <html>
 <div id="map"></div>
 <div id="w1" class="imgwrapper">
-    <p class="title">Photo</p>
+    <p class="title">Lake 1 <br> Photo</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4866.JPG" target="_blank">
             <img class="img1s" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4866.JPG">
@@ -20,7 +20,7 @@
     </p>
 </div>
 <div id="w2" class="imgwrapper">
-    <p class="title">Photo</p>
+    <p class="title">Lake2 <br> Photo</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4867.JPG" target="_blank">
             <img class="img1s" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4867.JPG">
