--- a/GPS31.html
+++ b/GPS31.html
@@ -2,7 +2,7 @@
 <html>
 <div id="map"></div>
 <div id="w1" class="imgwrapper">
-    <p class="title">Lake 1 <br> Photo</p>
+    <p class="title"><u>Lake 1 </u><br> Photo</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4866.JPG" target="_blank">
             <img class="img1s" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4866.JPG">
@@ -20,7 +20,7 @@
     </p>
 </div>
 <div id="w2" class="imgwrapper">
-    <p class="title">Lake2 <br> Photo</p>
+    <p class="title"><u>Lake2</u> <br> Photo</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4867.JPG" target="_blank">
             <img class="img1s" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4867.JPG">
@@ -37,7 +37,7 @@
     </p>
 </div>
 <div id="w3" class="imgwrapper">
-    <p class="title">Photos</p>
+    <p class="title"><u>Lake 3</u> <br> Photos</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4869.JPG" target="_blank">
         <img class="imgs1" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4869.JPG">
@@ -99,7 +99,7 @@
     </p>
 </div>
 <div id="w4" class="imgwrapper">
-    <p class="title">Photos</p>
+    <p class="title"><u>Lake 4 </u><br> Photos</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4885.JPG" target="_blank">
             <img class="imgs2" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4885.JPG">
@@ -140,7 +140,7 @@
     </p>
 </div>
 <div id="w5" class="imgwrapper">
-    <p class="title">Photos</p>
+    <p class="title"><u>Lake 5 </u><br> Photos</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4887.JPG" target="_blank">
             <img class="imgs3" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4887.JPG">
@@ -196,7 +196,7 @@
     </p>
 </div>
 <div id="w6" class="imgwrapper">
-    <p class="title">Photo</p>
+    <p class="title"><u>Lake 6 </u><br> Photo</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4901.JPG" target="_blank">
             <img class="img1s" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4901.JPG">
@@ -213,7 +213,7 @@
     </p>
 </div>
 <div id="w7" class="imgwrapper">
-    <p class="title">Photo</p>
+    <p class="title"><u>River </u><br> Photo</p>
     <div class="imgbox">
         <a href="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_48902.JPG" target="_blank">
             <img class="img1s" src="https://raw.githubusercontent.com/xaoscience/GPS/master/Files/IMG_4902.JPG">
