--- a/GPS31.html
+++ b/GPS31.html
@@ -497,6 +497,8 @@
         justify-content: space-between;
         font-weight: bold;
         font-size: 1rem;
+        text-align: center;
+        block-size: 5rem;
     }
     .imgs, .img1s, .imgs1, .imgs2, .imgs3 {
         width: 15rem;
