--- a/GPS31.html
+++ b/GPS31.html
@@ -79,7 +79,7 @@
         }
         function showDivs(n) {
           var i;
-          var x = document.getElementsByClassName("imgs1");
+          var x = document.getElementsByClassName("imgs3");
           if (n > x.length) {slideIndex = 1}
           if (n < 1) {slideIndex = x.length}
           for (i = 0; i < x.length; i++) {
@@ -489,7 +489,7 @@
         width: 15rem;
         height: auto;
     }
-    .buttons {
+    .buttons, b {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
