--- a/GPS31.html
+++ b/GPS31.html
@@ -72,20 +72,20 @@
         </div>
     </div>
     <script>
-        var slideIndex = 1;
-        showDivs(slideIndex);
+        var slideIndex1 = 1;
+        showDivs(slideIndex1);
         function plusDivs(n) {
-          showDivs(slideIndex += n);
+          showDivs(slideIndex1 += n);
         }
         function showDivs(n) {
           var i;
           var x = document.getElementsByClassName("imgs1");
-          if (n > x.length) {slideIndex = 1}
-          if (n < 1) {slideIndex = x.length}
+          if (n > x.length) {slideIndex1 = 1}
+          if (n < 1) {slideIndex1 = x.length}
           for (i = 0; i < x.length; i++) {
             x[i].style.display = "none";  
           }
-          x[slideIndex-1].style.display = "block";  
+          x[slideIndex1-1].style.display = "block";  
         }
         </script>
     <p class="comment">
@@ -113,20 +113,20 @@
         </div>
     </div>
     <script>
-        var slideIndex = 1;
-        showDivs(slideIndex);
+        var slideIndex2 = 1;
+        showDivs(slideIndex2);
         function plusDivs(n) {
-          showDivs(slideIndex += n);
+          showDivs(slideIndex2 += n);
         }
         function showDivs(n) {
           var i;
           var x = document.getElementsByClassName("imgs2");
-          if (n > x.length) {slideIndex = 1}
-          if (n < 1) {slideIndex = x.length}
+          if (n > x.length) {slideIndex2 = 1}
+          if (n < 1) {slideIndex2 = x.length}
           for (i = 0; i < x.length; i++) {
             x[i].style.display = "none";  
           }
-          x[slideIndex-1].style.display = "block";  
+          x[slideIndex2-1].style.display = "block";  
         }
         </script>
     <p class="comment">
@@ -169,16 +169,16 @@
         </div>
     </div>
     <script>
-        var slideIndex = 1;
-        showDivs(slideIndex);
+        var slideIndex3 = 1;
+        showDivs(slideIndex3);
         function plusDivs(n) {
-          showDivs(slideIndex += n);
+          showDivs(slideIndex3 += n);
         }
         function showDivs(n) {
           var i;
           var x = document.getElementsByClassName("imgs3");
-          if (n > x.length) {slideIndex = 1}
-          if (n < 1) {slideIndex = x.length}
+          if (n > x.length) {slideIndex3 = 1}
+          if (n < 1) {slideIndex3 = x.length}
           for (i = 0; i < x.length; i++) {
             x[i].style.display = "none";  
           }
@@ -253,7 +253,6 @@
     var areas = {
         'r1': {
             windowInfo: w1,
-            Num: 1,
             polyPath: [
                 {lat: 50.964738, lng: 5.335736},
                 {lat: 50.964763, lng: 5.335600},
@@ -497,6 +496,8 @@
         justify-content: space-between;
         font-weight: bold;
         font-size: 1rem;
+        text-align: center;
+        block-size: 3rem;
     }
     p {
         display: flex;
