--- a/GPS31.html
+++ b/GPS31.html
@@ -68,7 +68,7 @@
         </a>
         <div class="buttons">
                 <button class="b" onclick="plusDivs(-1)">&#10094;</button>
-                <button class ="b" onclick="plusDivs(1)">&#10095;</button>
+                <button class="b" onclick="plusDivs(1)">&#10095;</button>
         </div>
     </div>
     <script>
@@ -182,7 +182,7 @@
           for (i = 0; i < x.length; i++) {
             x[i].style.display = "none";  
           }
-          x[slideIndex-1].style.display = "block";  
+          x[slideIndex3-1].style.display = "block";  
         }
         </script>
     <p class="comment">
