--- a/GPS31.html
+++ b/GPS31.html
@@ -444,7 +444,6 @@
         createArea(areas['r7'], map);
         infoWindow = new google.maps.InfoWindow;
     }
-
 </script>
 <style>
     html,
@@ -482,11 +481,8 @@
         text-align: center;
         block-size: 3rem;
     }
-    p {
-        display: flex;
-        justify-content: center;
-    }
-    .imgs, .img1s, .imgs1, .imgs2, .imgs3 {
+
+    .img1s, .imgs1, .imgs2, .imgs3 {
         width: 15rem;
         height: auto;
     }
